# sharp_boost_voronoi

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  VoronoiWrapper.cs  VoronoiWrapperTests.cs  WORKSPACE  WORKSPACE.bzlmod  boost_repo.bzl  deps.bzl  extensions.bzl  import.bzl  local_config_clang.bzl  local_config_clang_extension.bzl  local_config_win_clang.bzl  local_config_win_clang_extension.bzl  paket.dependencies  paket.sharp_boost_voronoi_deps.bzl  paket.sharp_boost_voronoi_deps_extension.bzl  sharp_boost_voronoi_deps.bzl  update_deps.sh
VoronoiWrapper/: BUILD.bazel  VoronoiWrapper.cs  VoronoiWrapper.csproj  paket.dependencies  paket.references  paket.sharp_boost_voronoi_deps.bzl
VoronoiWrapper/VoronoiWrapperTests/: BUILD.bazel  VoronoiWrapperTests.cs  VoronoiWrapperTests.csproj  paket.references
boost_voronoi/: BUILD.bazel  boost_voronoi.h  boost_voronoi_wrap.cpp  boost_voronoi_wrap.hpp  boost_voronoi_wrap_ut.cpp
