load("@rules_dotnet//dotnet:defs.bzl", "csharp_library", "csharp_nunit_test")

csharp_library(
    name = "sharp_boost_voronoi",
    srcs = ["VoronoiWrapper.cs"],
    private_deps = [
        "@sharp_boost_voronoi_deps//microsoft.netcore.app.ref",
    ],
    allow_unsafe_blocks = True,
    target_frameworks = ["net6.0"],
    deps = ["@rules_dotnet//tools/runfiles"],
    data = ["//boost_voronoi:boost_voronoi"],
    visibility = ["//visibility:public"],
)

csharp_nunit_test(
    name = "sharp_boost_voronoi_tests",
    srcs = glob(["VoronoiWrapperTests.cs"]),
    strict_deps = True,
    private_deps = [
        "@sharp_boost_voronoi_deps//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net6.0"],
    deps = [
        ":sharp_boost_voronoi",
        "@sharp_boost_voronoi_deps//nunit",
    ],
    visibility = ["//visibility:public"],
)
