load("@rules_dotnet//dotnet:defs.bzl", "csharp_library", "csharp_nunit_test")

csharp_library(
    name = "sharp_boost_voronoi",
    srcs = ["VoronoiWrapper.cs"],
    data = ["//boost_voronoi"],
    deps = ["@rules_dotnet//tools/runfiles"],
    allow_unsafe_blocks = True,
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@paket.sharp_boost_voronoi_deps//microsoft.netcore.app.ref",
    ],
    visibility = ["//visibility:public"],
)

csharp_nunit_test(
    name = "sharp_boost_voronoi_tests",
    srcs = ["VoronoiWrapperTests.cs"],
    deps = [
        ":sharp_boost_voronoi",
        "@paket.sharp_boost_voronoi_deps//nunit",
    ],
    strict_deps = True,
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@paket.sharp_boost_voronoi_deps//microsoft.netcore.app.ref",
    ],
    visibility = ["//visibility:public"],
)
