module(
    name = "sharp_boost_voronoi",
    version = "0.0.12",
)

bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_github_google_googletest")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "boost")

bazel_dep(name = "rules_dotnet", version = "0.15.1")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

paket2bazel_dependencies_extension = use_extension("@rules_dotnet//dotnet:paket.paket2bazel_dependencies_extension.bzl", "paket2bazel_dependencies_extension")
use_repo(paket2bazel_dependencies_extension, "paket.paket2bazel_dependencies")

sharp_boost_voronoi_deps_extension = use_extension("//VoronoiWrapper:paket.sharp_boost_voronoi_deps_extension.bzl", "sharp_boost_voronoi_deps_extension")
use_repo(sharp_boost_voronoi_deps_extension, "paket.sharp_boost_voronoi_deps")

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
