cc_library(
    name = "boost_voronoi_wrap",
    srcs = [
        "boost_voronoi_wrap.cpp",
        "boost_voronoi_wrap.hpp",
    ],
    hdrs = [
        "boost_voronoi.h",
    ],
    copts = [
        "-Wall",
    ],
    deps = [
        "@boost//:polygon",
        "@boost//:bimap",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "boost_voronoi_ut",
    srcs = ["boost_voronoi_wrap_ut.cpp"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":boost_voronoi_wrap",
        "@com_github_google_googletest//:gtest_main",
    ],
)

cc_shared_library(
    name = "boost_voronoi",
    deps = [":boost_voronoi_wrap"],
    visibility = ["//visibility:public"],
)
