load("@rules_foreign_cc//foreign_cc:boost_build.bzl", "boost_build")

boost_build(
    name = "boost_headers",
    lib_source = "@boost//:all",
    out_headers_only = True,
    out_include_dir = select({
        "@platforms//os:windows": "include/boost-1_83",
        "//conditions:default": "include",
    }),
    user_options = ["--with-headers"],
    bootstrap_script = select({
        "@platforms//os:windows": "bootstrap.bat",
        "//conditions:default": "bootstrap.sh",
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "boost_voronoi_wrap",
    srcs = [
        "boost_voronoi_wrap.cpp",
        "boost_voronoi_wrap.hpp",
    ],
    hdrs = [
        "boost_voronoi.h",
    ],
    copts = [
        "-Wall",
    ],
    deps = [
        ":boost_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "boost_voronoi_ut",
    srcs = ["boost_voronoi_wrap_ut.cpp"],
    linkopts = [
        "-lm",
    ],
    deps = [
        ":boost_voronoi_wrap",
        "@com_github_google_googletest//:gtest_main",
    ],
)

cc_shared_library(
    name = "boost_voronoi",
    deps = [":boost_voronoi_wrap"],
    visibility = ["//visibility:public"],
)
